@@ -69,29 +69,43 @@
 -ea
 # enable thread priorities, primarily so we can give periodic tasks
 # a lower priority to avoid interfering with client workload
+#-XX:+UseThreadPriorities
 # allows lowering thread priority without being root on linux - probably
 # not necessary on Windows but doesn't harm anything.
 # see http://tech.stolsvik.com/2010/01/linux-java-thread-priorities-workar
+#-XX:ThreadPriorityPolicy=42
 # Enable heap-dump if there's an OOM
+#-XX:+HeapDumpOnOutOfMemoryError
 # Per-thread stack size.
 -Xss256k
 # Larger interned string table, for gossip's benefit (CASSANDRA-6410)
+#-XX:StringTableSize=1000003
 # Make sure all memory is faulted and zeroed on startup.
 # This helps prevent soft faults in containers and makes
 # transparent hugepage allocation more effective.
+#-XX:+AlwaysPreTouch
 # Disable biased locking as it does not benefit Cassandra.
+#-XX:-UseBiasedLocking
 # Enable thread-local allocation blocks and allow the JVM to automatically
 # resize them at runtime.
+#-XX:+UseTLAB
+#-XX:+ResizeTLAB
+#-XX:+UseNUMA
 # http://www.evanjones.ca/jvm-mmap-pause.html
+#-XX:+PerfDisableSharedMem
 # Prefer binding to IPv4 network intefaces (when net.ipv6.bindv6only=1). See
 # http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6342561 (short version:
 # comment out this entry to enable IPv6 support).
 -Djava.net.preferIPv4Stack=true
 ### Debug options
 # uncomment to enable flight recorder
+##-XX:+UnlockCommercialFeatures
+##-XX:+FlightRecorder
 # uncomment to have Cassandra JVM listen for remote debuggers/profilers on port 1414
 #-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1414
 # uncomment to have Cassandra JVM log internal method compilation (developers only)
+##-XX:+UnlockDiagnosticVMOptions
+##-XX:+LogCompilation
 #################
 # HEAP SETTINGS #
 #################
@@ -140,26 +154,50 @@
 #  GC SETTINGS  #
 #################
 ### CMS Settings
+#-XX:+UseParNewGC
+#-XX:+UseConcMarkSweepGC
+#-XX:+CMSParallelRemarkEnabled
+#-XX:SurvivorRatio=8
+#-XX:MaxTenuringThreshold=1
+#-XX:CMSInitiatingOccupancyFraction=75
+#-XX:+UseCMSInitiatingOccupancyOnly
+#-XX:CMSWaitDuration=10000
+#-XX:+CMSParallelInitialMarkEnabled
+#-XX:+CMSEdenChunksRecordAlways
 # some JVMs will fill up their heap when accessed via JMX, see CASSANDRA-6541
+#-XX:+CMSClassUnloadingEnabled
 ### G1 Settings (experimental, comment previous section and uncomment section below to enable)
 ## Use the Hotspot garbage-first collector.
+##-XX:+UseG1GC
 #
 ## Have the JVM do less remembered set work during STW, instead
 ## preferring concurrent GC. Reduces p99.9 latency.
+##-XX:G1RSetUpdatingPauseTimePercent=5
 #
 ## Main G1GC tunable: lowering the pause target will lower throughput and vise versa.
 ## 200ms is the JVM default and lowest viable setting
 ## 1000ms increases throughput. Keep it smaller than the timeouts in cassandra.yaml.
+##-XX:MaxGCPauseMillis=500
 ## Optional G1 Settings
 # Save CPU time on large (>= 16GB) heaps by delaying region scanning
 # until the heap is 70% full. The default in Hotspot 8u40 is 40%.
+##-XX:InitiatingHeapOccupancyPercent=70
 # For systems with > 8 cores, the default ParallelGCThreads is 5/8 the number of logical cores.
 # Otherwise equal to the number of cores when 8 or less.
 # Machines with > 10 cores should try setting these to <= full cores.
+##-XX:ParallelGCThreads=16
 # By default, ConcGCThreads is 1/4 of ParallelGCThreads.
 # Setting both to the same value can reduce STW durations.
+##-XX:ConcGCThreads=16
 ### GC logging options -- uncomment to enable
+#-XX:+PrintGCDetails
+#-XX:+PrintGCDateStamps
+#-XX:+PrintHeapAtGC
+#-XX:+PrintTenuringDistribution
+#-XX:+PrintGCApplicationStoppedTime
+#-XX:+PrintPromotionFailure
+##-XX:PrintFLSStatistics=1
 #-Xloggc:/var/log/cassandra/gc.log
-
-
-
+#-XX:+UseGCLogFileRotation
+#-XX:NumberOfGCLogFiles=10
+#-XX:GCLogFileSize=10M
